fixed cover resize on mobile

--- a/book.css
+++ b/book.css
@@ -48,8 +48,27 @@ img {
 h1 {
   display: none;
 }
+
+h3 {
+  margin-bottom: 0px;
+}
+
 section {
   break-after: always;
+}
+
+ol {
+  margin-top: 0;
+  padding-left: 25px;
+}
+
+li {
+  margin-top: .25em;
+  margin-bottom: .25em;
+}
+
+ol > li::marker {
+  font-weight: bold;
 }
 
 .breakbefore {
@@ -123,33 +142,52 @@ tr td {
   border-bottom: .5px solid lightgray;
 }
 
-
 @media screen {
   body {
-    background: gray;
+    background: lightgray;
   }
   section {
-    font-size: 1.1rem;
-    width: 5in;
+    padding-left: 1rem;
+    padding-right: 1rem;
     margin: auto;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    padding: .25in .25in .5in .25in;
+    box-shadow: 4px 4px darkgray;
     background: white;
+    padding: .25in .25in .5in .25in;
     z-index: -1;
+    font-size: 1.1rem;
+    width: 5in;
+    padding: .25in .25in .5in .25in;
+    background-color: cornsilk;
   }
   .blank {
     display: none;
   }
   .background {
     box-sizing: border-box;
+    position: relative;
+    box-sizing: border-box;
     height: 8.5in;
     width: 5.5in;
     position: relative;
   }
   .background img{
-    clip: rect(.125in, 5.625in, 8.625in, .125in);
     top: -.125in;
     left: -.125in;
+    clip: rect(.125in, 5.625in, 8.625in, .125in);
+  }
+}
+@media only screen and (max-width: 5.5in) {
+  section {
+    color: blue;
+    width: auto;
+  }
+  .background {
+    height: 160vw;
+  }
+  .background img{
+    height: 165vw;
+    width: 104vw;
   }
 }
